Fix navbar height on small screens and make fade

--- a/app/frontend/src/stylesheets/components/nav.sass
+++ b/app/frontend/src/stylesheets/components/nav.sass
@@ -1,7 +1,11 @@
 .navbar
-  background-color: rgba(55, 55, 55, 0.8) !important
+  background-color: #373737 !important
+  opacity: 0.8
   height: 8%
+  transition: opacity .3s ease-in-out
   display: flex
+  @media screen and (max-height: 600px)
+    height: 14%
 
 .nav-logo
   height: 100%
